<resources>
    <string name="app_name">便民警务</string>
    <string name="text_hint_input_phone_number">请输入手机号码</string>
    <string name="text_hint_input_sms_captcha">请输入短信验证码</string>
    <string name="text_hint_input_password">请输入6-10位密码</string>
    <string name="text_hint_input_password_confirm">请再次输入新密码</string>
    <string name="text_quickly_register">快速注册</string>
    <string name="text_finish_register">完成注册</string>
    <string name="text_reset_login_password">重置登录密码</string>
    <string name="text_finish_reset">完成重置</string>
    <string name="text_login">登录</string>
    <string name="text_register">注册账号</string>
    <string name="text_forgot_password">忘记密码</string>
    <string name="text_resent_onclick">点击重发</string>
    <string name="text_login_onclick">点击登录</string>
    <string name="text_home">首页</string>
    <string name="text_query">查询</string>
    <string name="text_me">我的</string>
    <string name="text_setting">设置</string>
    <string name="text_about_us">关于</string>

    <string name="text_call_cop">一键拨打110</string>
    <string name="text_call_cop_local">一键联系片警</string>
    <string name="text_capture_photo">拍摄警情图片</string>
    <string name="text_capture_video">拍摄警情视频</string>
    <string name="text_cop_announcement">警务公告</string>
    <string name="text_cop_announcement_detail">警务公告详情</string>
    <string name="text_message_board">警务交流</string>
    <string name="text_message_board_detail">警务交流详情</string>
    <string name="text_message_board_create">创建交流主题</string>

    <string name="text_tab_law">法律法规</string>
    <string name="text_tab_business">办事流程</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
